--- a/encuentro3/experimento_3.html
+++ b/encuentro3/experimento_3.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Experimento 2</title>
+    <title>Experimento 3</title>
     <meta charset="UTF-8">
     <script src="../jspsych-master/jspsych.js"></script>
     <script src="../jspsych-master/plugins/jspsych-html-keyboard-response.js"></script>
     <script src="../jspsych-master/plugins/jspsych-survey-multi-choice.js"></script>
+    <script src="../jspsych-master/plugins/jspsych-call-function.js"></script>
 
-    <link href="experimento_2.css" rel="stylesheet" type="text/css"></link>
+
+    <link href="experimento_3.css" rel="stylesheet" type="text/css"></link>
     </head>
     <body>
     </body>
-    <script src="experimento_2_7.js"></script>
+    <script src="experimento_3_1.js"></script>
 </html>
